--- a/Backend/.env
+++ b/Backend/.env
@@ -1,2 +1,15 @@
 APIKEY=rzp_test_QkgNZ2hjyeX9z4
 SECRETKEY=s862Raz4URk9ijNsxBCSsRVM
+
+DB_HOST="sql.freedb.tech"
+DB_PORT=3306
+DB_USER="freedb_recommend_admin"
+DB_PASSWORD="ruYZAccP3F$2j9#"
+DB_NAME="freedb_recommend_db"
+
+SECRET_KEY=huiku8ubghy6yfyhb  # Use a strong, random secret key
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
+# FastAPI Configuration
+API_URL=http://127.0.0.1:8000
